# google-ads-mcp

./: .gitignore  README.md  pyproject.toml
google_ads_mcp.egg-info/: PKG-INFO  SOURCES.txt
