[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[project]
name = "google-ads-mcp-python"
version = "0.1.0"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "google-ads>=28.0.0",
    "mcp[cli]>=1.2.0"
]

[dependency-groups]
dev = [
    "black",
    "nox >=2025.5.1, <2026"
]

[project.urls]
homepage = "https://github.com/locomotive-agency/google-ads-mcp"
repository = "https://github.com/locomotive-agency/google-ads-mcp.git"
issues = "https://github.com/locomotive-agency/google-ads-mcp/issues"

[project.scripts]
google-ads-mcp = "ads_mcp.server:run_server"
google-ads-mcp-update-gaql = "ads_mcp.update_references:update_gaql_resource_file"

[tool.uv.build-backend]
module-name = "ads_mcp"
